--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,5 @@
+0.18.10:
+  - RD-4036 Store both JSON and User Friendly plan output in runtime properties
 0.18.9: TFLint
 0.18.8:
   - RD-4037 Expose force param for reload template.
