--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,5 @@
+0.18.16:
+ - RD-4603 Update Terraform Binary Workflow
 0.18.15: RD-4023 Terratag
 0.18.14: RD-4372 Make sure that terraform plan only uses module nodes.
 0.18.13: Fix issue in tflint
