--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,5 @@
+0.18.18:
+ - RD-4607 Improve File System Modules Support
 0.18.17: RD-4653-support-tf-vars
 0.18.16:
  - RD-4603 Update Terraform Binary Workflow
