--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,9 +2,9 @@
  - Add flags override implementation.
  - Some advance handling of intrinsic function if passed via kwargs to operations.
  - RD-4607 Improve File System Modules Support.
- - RD-4726-create-a-workflow-for-tfsec
- - Add Heal and Update operations
- - RD-4727-create-workflow-terratag and Some fixes in tflint
+ - RD-4726-create-a-workflow-for-tfsec.
+ - Add Heal and Update operations.
+ - RD-4727-create-workflow-terratag and Some fixes in tflint.
 0.18.17: RD-4653-support-tf-vars
 0.18.16:
  - RD-4603 Update Terraform Binary Workflow
